<?xml version="1.0"?>
<package>
  <name>raspiarm_ros</name>
  <version>0.1.0</version>
  <description>The raspiarm_ros package</description>

  <maintainer email="tiryoh@gmail.com">Tiryoh</maintainer>
  <author email="tiryoh@gmail.com">Tiryoh</author>

  <license>MIT</license>

  <url type="website">http://github.com/raspiarm_ros/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>raspiarm_description</run_depend>
  <run_depend>raspiarm_controll</run_depend>
  <run_depend>raspiarm_gazebo</run_depend>

  <export>
    <metapackage />

  </export>
</package>
