<?xml version="1.0"?>
<package>
  <name>raspigibbon_ros</name>
  <version>0.1.1</version>
  <description>The raspigibbon_ros package</description>

  <maintainer email="tiryoh@gmail.com">Daisuke Sato</maintainer>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="brast351-github@yahoo.co.jp">Shota Hirama</author>

  <license>MIT</license>

  <url type="website">http://github.com/raspberrypigibbon/raspigibbon_ros/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>raspigibbon_description</run_depend>

  <export>
    <metapackage />

  </export>
</package>
